syntax = "proto3" ;
package order.v1 ;

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse) ;
}
message OrderRequest {
    string product_id = 1 ;
    int32 quantity = 2 ;
}

message OrderResponse {
    string order_id = 1 ;
    string message = 2 ;
}